@@ -3,6 +3,7 @@ Version 0.2
 * Make several classes subclasses of VexInterval to simplify things
 * Compute "Computational load" -- an estimate of the number of numerical operations required.
 * Initial (untested) support for ephemeris-driven targets
+* Estimate output data size / allow job splitting based on job size
 
 Version 0.1
 ~~~~~~~~~~~
